--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "dist",
     "sourceMap": true,
     "strict": true,
-    "target": "ESNext"
+    "target": "ESNext",
   },
-  "include": ["src"]
+  "include": ["src"],
 }
